[REFACTOR] Resolving Maintainability code smells from SonarCloud